deploy: 7e76a812a0ed839316dcdb954a39269916001674

--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
     
       <h1 id="page-title" class="page__title"></h1>
     
-    <p>I am an Assistant Professor in the <a href="https://www.marshall.usc.edu/departments/data-sciences-and-operations">Department of Data Sciences and Operations</a> at the <a href="https://www.marshall.usc.edu/">USC Marshall School of Business</a>, where I hold the Kenneth King Stonier Assistant Professorship in Business Administration. I also hold a courtesy appointment as Assistant Professor of <a href="https://www.cs.usc.edu/">Computer Science</a> in the <a href="https://viterbischool.usc.edu/">Viterbi School of Engineering</a>.</p>
+    <p>I am a tenured Associate Professor in the <a href="https://www.marshall.usc.edu/departments/data-sciences-and-operations">Department of Data Sciences and Operations</a> at the <a href="https://www.marshall.usc.edu/">USC Marshall School of Business</a>. I also hold a courtesy appointment in <a href="https://www.cs.usc.edu/">Computer Science</a> in the <a href="https://viterbischool.usc.edu/">Viterbi School of Engineering</a>.</p>
 
 <p>Prior to joining USC, I earned a Ph.D. in Statistics from Stanford University in 2020, where I was advised by <a href="https://profiles.stanford.edu/emmanuel-candes">Emmanuel Candès</a>. I am originally from Italy and completed my undergraduate and graduate studies at <a href="https://www.polito.it/en">Politecnico di Torino</a> and <a href="https://www.carloalberto.org/">Collegio Carlo Alberto</a>.</p>
 
