deploy: 1d1d58b96b65bda25203a2792d74aa9820019597

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
     </h3>
     
       <div class="author__bio p-note" itemprop="description">
-        <p>Statistician and Data Scientist.   Assistant Professor at the University of Southern California.</p>
+        <p>Statistician and Data Scientist.   Associate Professor at the University of Southern California.</p>
 
       </div>
     
