deploy: 17230ede9ef180c3bd688fde2acfdc453cbf0fca

--- a/index.html
+++ b/index.html
@@ -300,25 +300,30 @@
     
       <h1 id="page-title" class="page__title"></h1>
     
-    <p>I am a tenured Associate Professor in the <a href="https://www.marshall.usc.edu/departments/data-sciences-and-operations">Department of Data Sciences and Operations</a> at the <a href="https://www.marshall.usc.edu/">USC Marshall School of Business</a>. I also hold a courtesy appointment in <a href="https://www.cs.usc.edu/">Computer Science</a> in the <a href="https://viterbischool.usc.edu/">Viterbi School of Engineering</a>.</p>
+    <p>I am a tenured Associate Professor in the <a href="https://www.marshall.usc.edu/departments/data-sciences-and-operations">Department of Data Sciences and Operations</a> at the <a href="https://www.marshall.usc.edu/">USC Marshall School of Business</a>, with a courtesy appointment in <a href="https://www.cs.usc.edu/">Computer Science</a> at the <a href="https://viterbischool.usc.edu/">Viterbi School of Engineering</a>.</p>
 
-<p>Prior to joining USC, I earned a Ph.D. in Statistics from Stanford University in 2020, where I was advised by <a href="https://profiles.stanford.edu/emmanuel-candes">Emmanuel Candès</a>. I am originally from Italy and completed my undergraduate and graduate studies at <a href="https://www.polito.it/en">Politecnico di Torino</a> and <a href="https://www.carloalberto.org/">Collegio Carlo Alberto</a>.</p>
+<p>Before joining USC, I completed my Ph.D. in Statistics at Stanford University in 2020, where I was advised by <a href="https://profiles.stanford.edu/emmanuel-candes">Emmanuel Candès</a>. Originally from Italy, I earned my undergraduate and master’s degrees at <a href="https://www.polito.it/en">Politecnico di Torino</a> and <a href="https://www.carloalberto.org/">Collegio Carlo Alberto</a>.</p>
 
 <hr />
 
 <h3 id="research-interests">Research Interests</h3>
 
-<p>My research lies at the intersection of statistics and machine learning, with a focus on developing practical, reliable methods for analyzing complex, high-dimensional data. I aim to create tools that are not only statistically rigorous but also effective and broadly applicable in real-world settings—where data are often imperfect, and modeling assumptions rarely hold.</p>
+<p>My research focuses on developing statistically rigorous and practically useful methods for analyzing complex, high-dimensional data using modern machine learning models. I am particularly interested in problems where traditional modeling assumptions are hard to justify—a situation that arises more frequently as data grow in scale and complexity, and as increasingly sophisticated AI models are applied in sensitive, high-stakes domains.</p>
 
-<p>A unifying theme across my work is the development of distribution-free inference techniques that enable trustworthy prediction and robust variable selection—especially in areas such as machine learning, genetics, and biomedical research.</p>
+<p>A central theme in my work is <em>distribution-free</em> and <em>model-agnostic</em> inference. These methods are designed to work alongside complex machine learning models to identify important variables, ensure reproducibility, and quantify uncertainty, without relying on strong or unrealistic assumptions.
+Because they are grounded in fundamental statistical principles rather than tied to specific models or rigid distributional assumptions, these tools are highly adaptable and likely to remain relevant as AI continues to evolve.</p>
+
+<p>I also work as a consultant and expert collaborator in both academic and industry settings, helping to design reproducible analyses, quantify uncertainty in complex models, and communicate results clearly—especially in contexts where transparency and scientific defensibility are critical.</p>
 
 <hr />
 
 <h3 id="information-for-prospective-students-and-collaborators">Information for Prospective Students and Collaborators</h3>
 
-<p>I welcome new collaborations and have several research projects suitable for highly motivated Ph.D. students. If you are a current Ph.D. student at USC and interested in working with me, feel free to reach out via email.</p>
+<p>I welcome new collaborations and have several research projects that may be of interest to highly motivated Ph.D. students. If you are a current Ph.D. student at USC and would like to work with me, feel free to reach out by email.</p>
 
-<p>If you are not yet enrolled at USC but are considering applying to our Ph.D. program, please consult the <a href="https://www.marshall.usc.edu/programs/phd-program/departments/data-sciences-and-operations">DSO Ph.D. program information page</a>. All applications are submitted through the department’s standard admissions process described on that page.</p>
+<p>If you are not yet at USC but are considering applying to one of our Ph.D. programs, please visit the <a href="https://www.marshall.usc.edu/programs/phd-program/departments/data-sciences-and-operations">DSO Ph.D. program information page</a> or the <a href="https://www.cs.usc.edu/academic-programs/phd/">CS Ph.D. program information page</a>. All applications are submitted through the departments’ standard admissions processes described on those pages.</p>
+
+<hr />
 
 
 <h3 class="archive__subtitle">Recent Posts</h3>
