deploy: 94a9781bb54363fd6e3c0f930aec90c7f8565982

--- a/index.html
+++ b/index.html
@@ -290,20 +290,17 @@
     
       <h1 id="page-title" class="page__title"></h1>
     
-    <p>I am a tenured Associate Professor in the <a href="https://www.marshall.usc.edu/departments/data-sciences-and-operations">Department of Data Sciences and Operations</a> at the <a href="https://www.marshall.usc.edu/">USC Marshall School of Business</a>, with a courtesy appointment in <a href="https://www.cs.usc.edu/">Computer Science</a> at the <a href="https://viterbischool.usc.edu/">Viterbi School of Engineering</a>.</p>
+    <p>I am an Associate Professor (with tenure) in the <a href="https://www.marshall.usc.edu/departments/data-sciences-and-operations">Department of Data Sciences and Operations</a> at the <a href="https://www.marshall.usc.edu/">USC Marshall School of Business</a>, with a courtesy appointment in <a href="https://www.cs.usc.edu/">Computer Science</a> at the <a href="https://viterbischool.usc.edu/">Viterbi School of Engineering</a>.</p>
 
-<p>Before joining USC, I completed my Ph.D. in Statistics at Stanford University in 2020, where I was advised by <a href="https://profiles.stanford.edu/emmanuel-candes">Emmanuel Candès</a>. Originally from Italy, I earned my undergraduate and master’s degrees at <a href="https://www.polito.it/en">Politecnico di Torino</a> and <a href="https://www.carloalberto.org/">Collegio Carlo Alberto</a>.</p>
+<p>Before joining USC, I earned a Ph.D. in Statistics at Stanford University in 2020, advised by <a href="https://profiles.stanford.edu/emmanuel-candes">Emmanuel Candès</a>.
+I am originally from Italy, where I studied at <a href="https://www.polito.it/en">Politecnico di Torino</a> and <a href="https://www.carloalberto.org/">Collegio Carlo Alberto</a>.</p>
 
 <hr />
 
 <h3 id="research-interests">Research Interests</h3>
 
-<p>My research focuses on developing statistically rigorous and practically useful methods for analyzing complex, high-dimensional data using modern machine learning models. I am particularly interested in problems where traditional modeling assumptions are hard to justify—a situation that arises more frequently as data grow in scale and complexity, and as increasingly sophisticated AI models are applied in sensitive, high-stakes domains.</p>
-
-<p>A central theme in my work is <em>distribution-free</em> and <em>model-agnostic</em> inference. These methods are designed to work alongside complex machine learning models to <strong>identify important variables</strong>, <strong>ensure reproducibility</strong>, and <strong>quantify uncertainty</strong>, all while relying on <strong>defensible assumptions</strong>.
-Because they are grounded in fundamental statistical principles rather than tied to specific models or rigid distributional assumptions, these tools are highly adaptable and likely to remain relevant as AI continues to evolve.</p>
-
-<p>I also work as a <strong>consultant</strong> and expert collaborator in both academic and industry settings, helping to design reproducible data analyses, quantify uncertainty in complex models, and communicate results clearly to diverse audiences—especially in contexts where transparency and scientific defensibility are critical.</p>
+<p>I develop statistical methods for analyzing complex, high-dimensional data using modern machine learning models. I am particularly interested in <em>distribution-free</em> and <em>model-agnostic</em> approaches that can produce precise statistical inferences under defensible assumptions.
+I sometimes also work as a consultant and expert collaborator in both academic and industry settings, helping to design reproducible data analyses, quantify uncertainty in complex models, and communicate results clearly to diverse audiences.</p>
 
 <hr />
 
